<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BCI Noirtier de Villefort</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Alpha relative:</string>
    <string name="tvRawDataLbl">Raw Data Loading...</string>
    <string name="tvSingleblinkLbl">Please Make a Single Blink</string>
    <string name="tvDoubleblinkLbl">Please Make Double Blinks</string>
    <string name="tvTripleblinkLbl">Please Make Triple Blinks</string>
    <string name="tvAccumulatedWords">Accumulated Words</string>
    <string name="strBlankKeyboard">-</string>
    <string name="help">Help documentation</string>
    <string name="btnBackspace">Backspace</string>

    <string name="tvL1">A</string>
    <string name="tvL2">B</string>
    <string name="tvL3">C</string>
    <string name="tvL4">D</string>
    <string name="tvL5">E</string>
    <string name="tvL6">F</string>
    <string name="tvL7">G</string>
    <string name="tvL8">H</string>
    <string name="tvL9">I</string>
    <string name="tvL10">J</string>
    <string name="tvL11">K</string>
    <string name="tvL12">L</string>
    <string name="tvL13">M</string>
    <string name="tvL14">N</string>
    <string name="tvL15">O</string>
    <string name="tvL16">P</string>
    <string name="tvL17">Q</string>
    <string name="tvL18">R</string>
    <string name="tvR1">T</string>
    <string name="tvR2">U</string>
    <string name="tvR3">V</string>
    <string name="tvR4">W</string>
    <string name="tvR5">X</string>
    <string name="tvR6">Y</string>
    <string name="tvR7">Z</string>
    <string name="tvR8">0</string>
    <string name="tvR9">1</string>
    <string name="tvR10">2</string>
    <string name="tvR11">3</string>
    <string name="tvR12">4</string>
    <string name="tvR13">5</string>
    <string name="tvR14">6</string>
    <string name="tvR15">7</string>
    <string name="tvR16">8</string>
    <string name="tvR17">9</string>
    <string name="tvC">S</string>


    <string name="tvAlpha1">A</string>
    <string name="tvAlpha2">B</string>
    <string name="tvAlpha3">C</string>
    <string name="tvAlpha4">D</string>
    <string name="tvAlpha5">E</string>
    <string name="tvAlpha6">F</string>
    <string name="tvAlpha7">G</string>
    <string name="tvAlpha8">H</string>
    <string name="tvAlpha9">I</string>
    <string name="tvAlpha10">J</string>
    <string name="tvAlpha11">K</string>
    <string name="tvAlpha12">L</string>
    <string name="tvAlpha13">M</string>
    <string name="tvAlpha14">N</string>
    <string name="tvAlpha15">O</string>
    <string name="tvAlpha16">P</string>
    <string name="tvAlpha17">Q</string>
    <string name="tvAlpha18">R</string>
    <string name="tvAlpha19">S</string>
    <string name="tvAlpha20">T</string>
    <string name="tvAlpha21">U</string>
    <string name="tvAlpha22">V</string>
    <string name="tvAlpha23">W</string>
    <string name="tvAlpha24">X</string>
    <string name="tvAlpha25">Y</string>
    <string name="tvAlpha26">Z</string>

    <string name="tvBlink2">2</string>
    <string name="tvBlink3">3</string>
    <string name="tvBlink4">4</string>
    <string name="tvBlink5">5</string>

    <string name="permission_dialog_title">Muse Needs Your Permission</string>
    <string name="permission_dialog_description">Muse needs a few permissions to work properly. On the next screens, tap "Allow" to proceed. If you deny, Muse will not work properly until you go into your Android settings and allow.</string>
    <string name="permission_dialog_understand">I Understand</string>

    <string name="btn2disc">2</string>
    <string name="btn3disc">3</string>
    <string name="btn4disc">4</string>
    <string name="btn5disc">5</string>
    <string name="btn6disc">6</string>
    <string name="btn7disc">7</string>
    <string name="btn8disc">8</string>
    <string name="btn9disc">9</string>

</resources>
