<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--tools:context="com.choosemuse.example.libmuse">-->

    <!-- This is the Accumlated Text and Field -->
    <TextView
        android:id="@+id/accuText"
        android:layout_width="246dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|fill_vertical|center_horizontal|fill_horizontal|clip_vertical|clip_horizontal"
        android:includeFontPadding="false"
        android:text="@string/tvAccumulatedWords"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/accuEditText"
        android:layout_width="271dp"
        android:layout_height="62dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accuText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <!-- This block is for the first 18 alphabets of English -->


    <!-- This block is for the last 8 alphabets of English and 10 digits 0-9 -->


    <TextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="151dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuEditText"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivRedSignalE"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/red_signal" />

    <ImageView
        android:id="@+id/ivRedSignalM"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/red_signal" />

    <TextView
        android:id="@+id/tvSuggestion5"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuggestion4" />

    <TextView
        android:id="@+id/tvSuggestion4"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuggestion3" />

    <TextView
        android:id="@+id/tvSuggestion2"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuggestion1" />

    <TextView
        android:id="@+id/tvSuggestion1"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

    <TextView
        android:id="@+id/tvSuggestion3"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuggestion2" />

    <ImageView
        android:id="@+id/iv5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/btn5disc"
        app:layout_constraintStart_toEndOf="@+id/iv4"
        app:layout_constraintTop_toBottomOf="@+id/accuText"
        app:srcCompat="@drawable/b5" />

    <ImageView
        android:id="@+id/iv9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/btn9disc"
        app:layout_constraintStart_toEndOf="@+id/iv8"
        app:layout_constraintTop_toBottomOf="@+id/iv5"
        app:srcCompat="@drawable/b9" />

    <ImageView
        android:id="@+id/iv8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/btn8disc"
        app:layout_constraintStart_toEndOf="@+id/iv7"
        app:layout_constraintTop_toBottomOf="@+id/iv4"
        app:srcCompat="@drawable/b8" />

    <ImageView
        android:id="@+id/iv7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/btn7disc"
        app:layout_constraintStart_toEndOf="@+id/iv6"
        app:layout_constraintTop_toBottomOf="@+id/iv3"
        app:srcCompat="@drawable/b7" />

    <ImageView
        android:id="@+id/iv6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/btn6disc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv2"
        app:srcCompat="@drawable/b6" />

    <ImageView
        android:id="@+id/iv3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/btn3disc"
        app:layout_constraintStart_toEndOf="@+id/iv2"
        app:layout_constraintTop_toBottomOf="@+id/accuText"
        app:srcCompat="@drawable/b3" />

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/btn2disc"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuText"
        app:srcCompat="@drawable/b2" />

    <ImageView
        android:id="@+id/iv4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/btn4disc"
        app:layout_constraintStart_toEndOf="@+id/iv3"
        app:layout_constraintTop_toBottomOf="@+id/accuText"
        app:srcCompat="@drawable/b4" />

    <Button
        android:id="@+id/btnBackspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="2dp"
        android:text="@string/btnBackspace"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuggestion5" />

</android.support.constraint.ConstraintLayout>